# omk

./: .dockerignore  .gitignore  AGENTS.md  AUDIT_REPORT_2026-05-27.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  MODULE_CONTRACT_PATTERN.ru.md  Makefile  README.md  REFACTOR_AUDIT_2026-05-27.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  SPEC.md  TODO.md  deny.toml  docker-compose.yml  flake.nix  install.sh  manifest  vltdnqcsud6drtvb7fjrbds1vcotgb1g
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  coverage.yml  release-notes.yml  release.yml  stale.yml
.kimi/agents/architect/: system.md
.kimi/agents/executor/: system.md
.kimi/agents/integrator/: system.md
.kimi/agents/reviewer/: system.md
.kimi/agents/verifier/: system.md
.kimi/skills/omk-navigation/: SKILL.md
.omk/: AGENTS.md
.queue/: 001-foundation-shared-interfaces.md  002-ws-06-review-architect-real-rules.md  003-ws-09-review-security-auto-fix.md  004-ws-04-supervisor-concurrent-test.md  005-ws-28-cargo-bench-example-entries.md  006-ws-29-ci-restore-ubuntu.md  007-ws-01-goal-auto-rebase.md  008-ws-05-github-branch-protection.md  009-unified-chat-orchestrator-docs.md  010-uc-w1-chat-shell.md  011-uc-w2-intent-classifier.md  012-uc-w3-router.md  013-uc-w4-engine-pane.md  014-uc-w5-control-surface.md  015-uc-w6-goal-as-engine.md  AGENT_TEMPLATE.md  README.md
agents/: architect.md  critic.md  executor.md  planner.md
aur/: PKGBUILD  README.md
benches/: event_writer_benchmark.rs  goal_task_graph_benchmark.rs  redact_benchmark.rs  state_benchmark.rs
docs/: API.md  ARCHITECTURE.md  AUDIT_DOCUMENTATION_2026-05-19.md  CHANGELOG_ARCHIVE.md  COMPETITIVE_POSITIONING.md  GOAL_NOTIFICATIONS.md  KIMI_UPSTREAM.md  PROJECT_MAP.md  REGISTRY.md  TROUBLESHOOTING.md  TROUBLESHOOTING_GOAL.md  TUTORIAL.md  UNIFIED_CHAT_BASE.md  UNIFIED_CHAT_DECISIONS.md  north_star_tutorial.md
docs/superpowers/plans/: 2026-05-12-omk-goal-agent-mutation-evidence.md  2026-05-12-omk-goal-agent-proposed-tasks.md  2026-05-12-omk-goal-agent-wire-wave.md  (+10 more)
examples/: README.md  registry.json
examples/killer-demo/: README.md  run.sh
homebrew/: README.md  core-pr-template.rb  omk.rb
hooks/: user-prompt-submit.sh
scripts/: kimi-wire-smoke.sh  north_star_demo.sh  pre-commit.sh  repo-map.sh  sync-packaging-versions.sh
skills/architect/: SKILL.md
skills/autopilot/: SKILL.md
skills/backend/: SKILL.md
skills/data/: SKILL.md
skills/devops/: SKILL.md
skills/frontend/: SKILL.md
skills/qa/: SKILL.md
skills/ralph/: SKILL.md
skills/security/: SKILL.md
skills/team/: SKILL.md
skills/ultrawork/: SKILL.md
src/: error.rs  lib.rs  main.rs  test_helpers.rs
src/agents/: AGENTS.md  README.md  TODO.md  mod.rs  parser.rs  runtime.rs
src/analysis/: AGENTS.md  MODULE_CONTRACT.md  README.md  TODO.md  mod.rs  parser.rs
src/cli/: AGENTS.md  README.md  TODO.md  app.rs  ask.rs  autopilot.rs  backup.rs  cleanup.rs  config_cmd.rs  cost_cmd.rs  doctor.rs  gates.rs  goal.rs  hud.rs  kimi_native_cmd.rs  logs.rs  marketplace.rs  mod.rs  pools.rs  proof_cmd.rs  ralph.rs  run_cmd.rs  session.rs  skill.rs  state.rs  team.rs  ultrawork.rs
src/cost/: AGENTS.md  README.md  TODO.md  estimator.rs  file_sink.rs  mod.rs  sink.rs  tokens.rs  tracker.rs  types.rs
src/git/: README.md  branch.rs  command.rs  error.rs  mod.rs  parse.rs  repo.rs  tests.rs  types.rs  worktree.rs
src/kimi_native/: AGENTS.md  README.md  TODO.md  agent_spec.rs  diagnostics.rs  hook_spec.rs  installer.rs  manifest.rs  mod.rs  role_packs.rs  rollback.rs  sync.rs
src/llm/: AGENTS.md  README.md  TODO.md  cost.rs  error.rs  mod.rs  prompt.rs  retry.rs  types.rs
src/marketplace/: AGENTS.md  README.md  TODO.md  loader.rs  mod.rs  registry.rs
src/mcp/: AGENTS.md  README.md  TODO.md  bridge.rs  config.rs  mod.rs  registry.rs  server.rs  tools.rs
src/notifications/: AGENTS.md  README.md  TODO.md  mod.rs  webhook.rs
src/runtime/: AGENTS.md  README.md  TODO.md  ask.rs  atomic.rs  autopilot.rs  bridge.rs  config.rs  events.rs  gates.rs  goal.rs  metrics.rs  migrate.rs  mod.rs  proof.rs  ralph.rs  retry.rs  sanitize.rs  session.rs  shell.rs  state.rs  tmux.rs  ultrawork.rs  watchdog.rs  wire_worker.rs  worker.rs
src/skills/: AGENTS.md  README.md  TODO.md  discovery.rs  injector.rs  mod.rs  parser.rs
src/vis/: AGENTS.md  README.md  TODO.md  bus.rs  event_stream.rs  goal_progress.rs  hud.rs  hud_tui.rs  mod.rs  server.rs
src/wire/: AGENTS.md  README.md  TODO.md  client.rs  mod.rs  protocol.rs
tests/: agent_swarm_test.rs  approval_proxy_test.rs  ask_test.rs  autopilot_test.rs  backup_test.rs  chat_cli_wireup_test.rs  chat_shell_integration_test.rs  circuit_breaker_integration_test.rs  classifier_test.rs  cleanup_test.rs  cli_goal_ux_test.rs  cli_smoke.rs  config_test.rs  control_surface_test.rs  doctor_test.rs  engine_pane_snapshot_test.rs  escalation_log_integration_test.rs  fixture_runner.rs  gates_test.rs  goal_auto_rebase_test.rs  goal_budget_test.rs  goal_chat_api_test.rs  goal_cmd_test.rs  goal_delivery_metadata_api_test.rs  goal_delivery_metadata_test.rs  goal_delivery_slice_test.rs  goal_dispatch_policy_test.rs  goal_e2e_harness.rs  goal_github_delivery_test.rs  goal_llm_planner_wireup_test.rs  goal_open_pr_test.rs  goal_planning_oracle_test.rs  goal_progress_test.rs  goal_proof_status_test.rs  goal_ready_path_test.rs  goal_recovery_test.rs  goal_review_artifacts_test.rs  goal_review_gate_test.rs  goal_rewrite_oracle_test.rs  goal_rollback_conflict_evidence_test.rs  (+30 more)
tests/fixtures/: goal_end_to_end_cli_smoke_basic.rs  goal_end_to_end_cli_smoke_recovery.rs  goal_end_to_end_known_gaps.txt  goal_end_to_end_progress_markers.txt  goal_proof_not_ready_scaffold.json  goal_proof_verified_not_executed.json  goal_proof_with_agent_evidence.json  mock_kimi.rs  team_demo_fixture.rs
tests/router/: autonomous.rs  cap.rs  common.rs  cost.rs  large.rs  medium.rs  order.rs  overrides.rs  small.rs  thresholds.rs  trivial.rs
(+484 files in other folders)
