[package]
name = "omk"
version = "0.1.0"
edition = "2021"
authors = ["oh-my-kimi contributors"]
description = "Multi-agent orchestration for Kimi CLI"
license = "MIT"
repository = "https://github.com/yeachan-heo/oh-my-kimi"
keywords = ["kimi", "ai", "cli", "orchestration", "agent"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.78"

[[bin]]
name = "omk"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.44", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# CLI
clap = { version = "4.5", features = ["derive", "env", "cargo"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
toml = "0.8"

# Error handling & utilities
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Text processing
regex = "1.11"
once_cell = "1.21"
lazy_static = "1.5"

# Time
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.16", features = ["v4", "serde"] }

# Filesystem & paths
dirs = "6.0"
walkdir = "2.5"

# TUI (optional for now, enabled by default)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.29", optional = true }

# HTTP (for future MCP/vis server)
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
shlex = "1.3.0"

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm"]
server = ["dep:axum", "dep:tower"]

[dev-dependencies]
tempfile = "3.19"
