[package]
name = "omk"
version = "0.3.21"
default-run = "omk"
edition = "2021"
authors = ["oh-my-kimi contributors"]
description = "Local, Wire-first, proof-driven orchestration for Kimi CLI"
license = "MIT"
repository = "https://github.com/ekhodzitsky/oh-my-kimi"
keywords = ["kimi", "ai", "cli", "orchestration", "agent"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
rust-version = "1.78"

[lib]
name = "omk"
path = "src/lib.rs"

[[bin]]
name = "omk"
path = "src/main.rs"

[[bin]]
name = "mock-kimi"
path = "tests/fixtures/mock_kimi.rs"

[dependencies]
# Async runtime
tokio = { version = "1.44", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# CLI
clap = { version = "4.5", features = ["derive", "env", "cargo"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
toml = "0.8"

# Error handling & utilities
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
humantime = "2.1"

# Text processing
regex = "1.11"
once_cell = "1.21"
lazy_static = "1.5"

# Time
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.16", features = ["v4", "serde"] }

# Filesystem & paths
dirs = "6.0"
walkdir = "2.5"
which = "7.0"

# TUI (optional for now, enabled by default)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.29", optional = true }

# HTTP (for future MCP/vis server)
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustc_version_runtime = "0.3"
shlex = "1.3.0"
clap_complete = "4.5"
clap_mangen = "0.2"
tempfile = "3.19"
glob = "0.3.3"

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm"]
server = ["dep:axum", "dep:tower"]

[dev-dependencies]
tempfile = "3.19"
criterion = { version = "0.5", features = ["async_tokio"] }
assert_cmd = "2.0"
predicates = "3.1"
