[package]
name = "omk"
version = "0.5.0"
default-run = "omk"
edition = "2021"
authors = ["oh-my-kimi contributors"]
description = "A Rust runtime for Kimi CLI. Turns prompts into proof-backed engineering runs with gates, worktrees, and replay."
license = "MIT"
repository = "https://github.com/ekhodzitsky/oh-my-kimi"
keywords = ["kimi", "ai", "agent", "cli", "runtime"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
rust-version = "1.78"

[lib]
name = "omk"
path = "src/lib.rs"

[[bin]]
name = "validate-contracts"
path = "src/bin/validate-contracts.rs"

[[bin]]
name = "omk"
path = "src/main.rs"

[[bin]]
name = "mock-kimi"
path = "tests/fixtures/mock_kimi.rs"

[dependencies]
# Async runtime
tokio = { version = "1.44", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"

# CLI
clap = { version = "4.5", features = ["derive", "env", "cargo"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
toml = "1.1"

# Wire protocol client library
kimi-wire = { version = "0.4.1", features = ["process", "redact"] }

# Error handling & utilities
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
humantime = "2.1"
async-trait = "0.1"

# Text processing
regex = "1.11"
once_cell = "1.21"

# Time
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
uuid = { version = "1.16", features = ["v4", "serde"] }

# System interfaces
libc = "0.2"

# Filesystem & paths
dirs = "6.0"
walkdir = "2.5"
which = "8.0"

# TUI (optional for now, enabled by default)
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }

# tokio-console integration
console-subscriber = { version = "0.5", optional = true }

# HTTP (for future MCP/vis server)
axum = { version = "0.8", optional = true }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
shlex = "2.0.1"
clap_complete = "4.5"
clap_mangen = "0.3"
tempfile = "3.19"

# Pattern matching for file discovery (skill injection, workspace scanning)
glob = "0.3.3"

# Token counting for cost tracking and budget enforcement
tiktoken-rs = "0.11"

# Async cache for compiled skill regexes and tokeniser state
moka = { version = "0.12", features = ["future"] }
lru = "0.18"

# Tree-sitter parsing for language-aware context extraction
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tokio-rusqlite = "0.7"
rusqlite = { version = "0.37", features = ["bundled", "chrono", "backup"] }

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm"]
server = ["dep:axum"]
tokio-console = ["dep:console-subscriber", "tokio/tracing"]

[dev-dependencies]
criterion = { version = "0.8", features = ["async_tokio"] }
assert_cmd = "2.0"
predicates = "3.1"

[[bench]]
name = "event_writer_benchmark"
path = "benches/event_writer_benchmark.rs"
harness = false

[[bench]]
name = "goal_task_graph_benchmark"
path = "benches/goal_task_graph_benchmark.rs"
harness = false

[[bench]]
name = "redact_benchmark"
path = "benches/redact_benchmark.rs"
harness = false

[[bench]]
name = "state_benchmark"
path = "benches/state_benchmark.rs"
harness = false
